// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with black text on light backgrounds 1`] = `
.emotion-0 {
  margin-right: 4px;
  margin-top: 4px;
  padding: 4px;
  font-size: 12px;
  font-weight: 600;
  line-height: 1;
  border-radius: 2px;
  color: #000000;
  background-color: #eee;
  box-shadow: inset 0 -1px 0 rgba(0,35,70,0.09);
}

<span
  class="emotion-0"
/>
`;

exports[`renders with white text on dark backgrounds 1`] = `
.emotion-0 {
  margin-right: 4px;
  margin-top: 4px;
  padding: 4px;
  font-size: 12px;
  font-weight: 600;
  line-height: 1;
  border-radius: 2px;
  color: #ffffff;
  background-color: #333;
  box-shadow: inset 0 -1px 0 rgba(0,35,70,0.09);
}

<span
  class="emotion-0"
/>
`;
